--- a/SCME.WpfControlLibrary/CustomControls/ProfilesPageComponents/AddTestParameterUserControl.xaml
+++ b/SCME.WpfControlLibrary/CustomControls/ProfilesPageComponents/AddTestParameterUserControl.xaml
@@ -30,31 +30,22 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"></RowDefinition>
                 <RowDefinition Height="auto"></RowDefinition>
-                <RowDefinition Height="auto"></RowDefinition>
-                <RowDefinition Height="auto"></RowDefinition>
             </Grid.RowDefinitions>
 
-            <Label Grid.Column="0" Grid.Row="0"  Content="{x:Static res:Resources.CommutationTypeT}"/>
+        <Label Grid.Column="0" Grid.Row="0"  Content="Тип корпуса"/>
             <ComboBox Grid.Column="1" Grid.Row="0" 
                                       ItemsSource="{Binding Source={StaticResource ModuleCommutationTypes}}"
                                       SelectedValue="{Binding CommutationType}" SelectedValuePath="Value" DisplayMemberPath="Key" />
-            <Label Grid.Column="3" Grid.Row="0" Content="{x:Static res:Resources.Force}" />
-            <customControl:NumericUpDown Grid.Column="4" Grid.Row="0" Value="{Binding ParameterClamp}" />
 
-        <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.Height_Prof}"  />
-        <customControl:NumericUpDown Grid.Column="1" Grid.Row="1" Value="{Binding Height}"  />
 
-        <Label Grid.Column="3" Grid.Row="1" Content="{x:Static res:Resources.Temp}" />
-        <customControl:NumericUpDown Grid.Column="4" Grid.Row="1" Value="{Binding Temperature}"/>
-                
-        <Label Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.ParameterType}" 
+        <Label Grid.Column="0" Grid.Row="2" Content="Тип измерения" 
                    Visibility="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=pages:ProfilesPage}, Converter={StaticResource B2V}}"/>
             <ComboBox Grid.Column="1" Grid.Row="2" Visibility="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=pages:ProfilesPage}, Converter={StaticResource B2V}}"
                       ItemsSource="{Binding Source={StaticResource TestParametersTypes}}" 
                       DisplayMemberPath="Name" SelectedValuePath="TestParametersType" 
                       SelectedValue="{Binding Path=ProfileVm.SelectedTestParametersType, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type pages:ProfilesPage}}}">
             </ComboBox>
-            <Button Grid.Column="3" Grid.Row="2" Grid.ColumnSpan="2" Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Add}" Click="AddTestParameters_Click"
+            <Button Grid.Column="3" Grid.Row="0" Grid.ColumnSpan="2" Grid.RowSpan="2" Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Add}" Click="AddTestParameters_Click"
                     Visibility="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=pages:ProfilesPage}, Converter={StaticResource B2V}}"/>
             
             
