--- a/SCME.WpfControlLibrary/CustomControls/ProfilesPageComponents/ListViewTestParametersUserControl.xaml
+++ b/SCME.WpfControlLibrary/CustomControls/ProfilesPageComponents/ListViewTestParametersUserControl.xaml
@@ -16,6 +16,7 @@
              xmlns:dVdtParameters="clr-namespace:SCME.Types.dVdt;assembly=SCME.Types"
              xmlns:atuParameters="clr-namespace:SCME.Types.ATU;assembly=SCME.Types"
              xmlns:qrrTqParameters="clr-namespace:SCME.Types.QrrTq;assembly=SCME.Types"
+             xmlns:outputLeakageCurrent="clr-namespace:SCME.Types.OutputLeakageCurrent;assembly=SCME.Types"
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              xmlns:touParameters="clr-namespace:SCME.Types.TOU;assembly=SCME.Types"
              mc:Ignorable="d" Name="ThisListViewTestParametersUserControl"
@@ -42,6 +43,9 @@
         <ListView.Resources>
             <DataTemplate DataType="{x:Type gateParameters:TestParameters}" >
                 <testResultDataTemplate:GateDataTemplate />
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type outputLeakageCurrent:TestParameters}" >
+                <testResultDataTemplate:OutputLeakageCurrentTemplate />
             </DataTemplate>
             <DataTemplate DataType="{x:Type vtmParameters:TestParameters}" >
                 <testResultDataTemplate:VTMDataTemplate/>
