--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/OutputLeakageCurrentTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/OutputLeakageCurrentTemplate.xaml
@@ -64,8 +64,11 @@
     </TextBlock>
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="5"   Value="{Binding AuxiliaryVoltagePowerSupply2}"   StringFormat="N2"/>
 
-  
+    <Label Grid.Column="0" Grid.Row="6" Content="Ток утечки мин, мА" ></Label>
+    <customControls:NumericUpDown Grid.Column="1" Grid.Row="6"   Value="{Binding LeakageCurrentMinimum}" StringFormat="N2"/>
 
+    
+    
     <Label Grid.Column="3" Grid.Row="0" Content="Тип управления"/>
     <ComboBox Grid.Column="4" Grid.Row="0" ItemsSource="{Binding Source={StaticResource TypeManagement}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding TypeManagement}"  />
 
@@ -88,18 +91,16 @@
         </TextBlock>
     </TextBlock>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="4"   Value="{Binding AuxiliaryCurrentPowerSupply1}"   StringFormat="N2"/>
+    
     <TextBlock Grid.Column="3" Grid.Row="5" TextWrapping="Wrap">
         <TextBlock>
-                Ток вспомогательного<LineBreak/>питания 1, мА
+                Ток вспомогательного<LineBreak/>питания 2, мА
         </TextBlock>
     </TextBlock>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="5"   Value="{Binding AuxiliaryCurrentPowerSupply2}"   StringFormat="N2"/>
 
-    <Label Grid.Column="0" Grid.Row="6" Content="Ток утечки мин, мА" ></Label>
-    <customControls:NumericUpDown Grid.Column="1" Grid.Row="6"   Value="{Binding SwitchedAmperage}" StringFormat="N2"/>
-
     <Label Grid.Column="3" Grid.Row="6" Content="Ток утечки макс, мА" ></Label>
-    <customControls:NumericUpDown Grid.Column="4" Grid.Row="6"   Value="{Binding SwitchedAmperage}" StringFormat="N2"/>
+    <customControls:NumericUpDown Grid.Column="4" Grid.Row="6"   Value="{Binding LeakageCurrentMaximum}" StringFormat="N2"/>
 
 
 </Grid>
