--- a/SCME.WpfControlLibrary/Resources/ObjectDataProvider.xaml
+++ b/SCME.WpfControlLibrary/Resources/ObjectDataProvider.xaml
@@ -26,7 +26,8 @@
     <ObjectDataProvider x:Key="NumberPosition" MethodName="GetNumberPosition" ObjectType="{x:Type dataProviders:TestTypeEnumDictionary}"/>
     <ObjectDataProvider x:Key="ApplicationPolarityConstantSwitchingVoltage" MethodName="GetApplicationPolarityConstantSwitchingVoltage" ObjectType="{x:Type dataProviders:TestTypeEnumDictionary}"/>
     <ObjectDataProvider x:Key="PolarityDCSwitchingVoltageApplication" MethodName="GetPolarityDCSwitchingVoltageApplication" ObjectType="{x:Type dataProviders:TestTypeEnumDictionary}"/>
-
+    <ObjectDataProvider x:Key="SwitchingCurrentPulseShape" MethodName="GetSwitchingCurrentPulseShape" ObjectType="{x:Type dataProviders:TestTypeEnumDictionary}"/>
+    
     
 
     <ObjectDataProvider x:Key="FrequencyDivisors" MethodName="GetFrequencyDivisors" ObjectType="{x:Type dataProviders:TestTypeEnumDictionary}"/>
