--- a/SCME.WpfControlLibrary/Pages/ProfilesPage.xaml
+++ b/SCME.WpfControlLibrary/Pages/ProfilesPage.xaml
@@ -111,37 +111,25 @@
                     
                 </customControls:ScrollViewerLeftMouseButtonScroll.Resources>
                 <Grid IsSharedSizeScope="True" Background="{StaticResource ListViewTestParametersBrush}">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="1*"/>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="1*"/>
-                    </Grid.ColumnDefinitions>
+                   
                     <Grid.RowDefinitions>
                         <RowDefinition Height="auto"/>
                         <RowDefinition Height="auto" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
-                    
-                    <StackPanel Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center"  Visibility="{Binding IsClampingCommutationActive, Converter={StaticResource B2V}}">
-                        <Border IsEnabled="{Binding IsEditModeActive}" BorderThickness="1" BorderBrush="AliceBlue"
-                                    Margin="10">
+
+                    <Border Grid.Column="1" Grid.Row="1" IsEnabled="{Binding IsEditModeActive}" Margin="10,10,50,0" BorderThickness="1" BorderBrush="AliceBlue" Visibility="{Binding IsClampingCommutationActive, Converter={StaticResource B2V}}"
+                                     HorizontalAlignment="Stretch" >
                             <profilesPageComponents:AddTestParameterUserControl Background="{StaticResource ListViewTestParametersBrush}"
-                                    x:Name="AddTestParameterUserControl" Margin="10"
+                                    x:Name="AddTestParameterUserControl" Margin="10"  HorizontalAlignment="Stretch" 
                                     DataContext="{Binding ProfileDeepDataCopy}"
                                     AddTestParametersEvent="AddTestParametersEvent_Click" />
                         </Border>
 
-                        <Border BorderThickness="1" Grid.ColumnSpan="2"
-                                    BorderBrush="AliceBlue" Margin="10" Background="{StaticResource ListViewTestParametersBrush}"
-                                    IsEnabled="{Binding IsEditModeActive}">
-                            <CheckBox Margin="10" DataContext="{Binding ProfileDeepDataCopy}" FlowDirection="RightToLeft"
-                                          IsChecked="{Binding IsHeightMeasureEnabled}" Foreground="White"
-                                          Content="{x:Static res:Resources.MeasureDialog_Title}" />
-                        </Border>
-                    </StackPanel>
+                      
 
-                    <profilesPageComponents:ListViewTestParametersUserControl Grid.Column="1" Grid.Row="2" HorizontalAlignment="Center" 
-                            ContentIsEnabled="{Binding IsEditModeActive}"
+                    <profilesPageComponents:ListViewTestParametersUserControl Grid.Column="1" Grid.Row="2" HorizontalAlignment="Stretch" 
+                            ContentIsEnabled="{Binding IsEditModeActive}" 
                             ItemSource="{Binding ProfileDeepDataCopy.TestParametersAndNormatives}"
                             PreviewMouseWheel="TestParametersListView_OnPreviewMouseWheel"
                             VirtualizingStackPanel.IsVirtualizing="True" VirtualizingStackPanel.ScrollUnit="Pixel" />
