--- a/SCME.UI/PagesTech/TechnicianPage.xaml
+++ b/SCME.UI/PagesTech/TechnicianPage.xaml
@@ -178,7 +178,35 @@
                     </Grid>
                 </Button>
 
-            </UniformGrid>
+            <Button CommandParameter="18" >
+                <Grid Background="{StaticResource xGreen2}">
+                    <Label Content="Ток утечки на выходе" />
+                </Grid>
+            </Button>
+
+            <Button CommandParameter="19" >
+                <Grid Background="{StaticResource xGreen2}">
+                    <Label>
+                    <TextBlock TextAlignment="Center">
+                        Выходное<LineBreak/>остаточ. напряжение
+                    </TextBlock>
+                    </Label>
+                </Grid>
+            </Button>
+
+            <Button CommandParameter="20" >
+                <Grid Background="{StaticResource xGreen2}">
+                    <Label Content="Параметры входа " />
+                </Grid>
+            </Button>
+
+            <Button CommandParameter="21" >
+                <Grid Background="{StaticResource xGreen2}">
+                    <Label Content="Напряже-ние запрета" />
+                </Grid>
+            </Button>
+
+        </UniformGrid>
        
         <Button Grid.Column="0" Grid.Row="1"
                 Content="{x:Static res:Resources.Back}"
