Мелкие правки по внешнему виду страицы профилей , компонент список измерений.

--- a/SCME.UI/PagesTech/TechnicianPage.xaml
+++ b/SCME.UI/PagesTech/TechnicianPage.xaml
@@ -188,7 +188,7 @@
                 <Grid Background="{StaticResource xGreen2}">
                     <Label>
                     <TextBlock TextAlignment="Center">
-                        Выходное<LineBreak/>остаточ. напряжение
+                        Выходное<LineBreak/>остаточное напряжение
                     </TextBlock>
                     </Label>
                 </Grid>
