--- a/SCME.WpfControlLibrary/CustomControls/ProfilesPageComponents/AddTestParameterUserControl.xaml
+++ b/SCME.WpfControlLibrary/CustomControls/ProfilesPageComponents/AddTestParameterUserControl.xaml
@@ -16,15 +16,16 @@
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Common.xaml"/>
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/NumericUpDown.xaml"/>
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/DataTemplateForTestParameters.xaml"/>
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/ImpulseOverwrite.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
             <Grid >
             <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto"  />
+            <ColumnDefinition Width="*"  />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="30" />
-            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
@@ -33,19 +34,19 @@
             </Grid.RowDefinitions>
 
         <Label Grid.Column="0" Grid.Row="0"  Content="Тип корпуса"/>
-        <ComboBox Grid.Column="1" Grid.Row="0" 
+        <ComboBox Grid.Column="1" Grid.Row="0"  Grid.ColumnSpan="3"  Margin="5,5,5,5"
                                       ItemsSource="{Binding Source={StaticResource ModuleCommutationTypes}}"
                                       SelectedValue="{Binding CommutationType}" SelectedValuePath="Value" DisplayMemberPath="Key" />
 
 
         <Label Grid.Column="0" Grid.Row="2" Content="Тип измерения" 
                    />
-        <ComboBox Grid.Column="1" Grid.Row="2"   
+        <ComboBox Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="3"  Margin="5,5,5,5"
                       ItemsSource="{Binding Source={StaticResource TestParametersTypes}}" 
                       DisplayMemberPath="Name" SelectedValuePath="TestParametersType"  SelectedIndex="0"
                       SelectedValue="{Binding Path=ProfileVm.SelectedTestParametersType, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type pages:ProfilesPage}}}">
             </ComboBox>
-            <Button Grid.Column="3" Grid.ColumnSpan="2" Grid.Row="0" Grid.RowSpan="2" Height="auto"  Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Add}" Click="AddTestParameters_Click"
+            <Button Grid.Column="4" Grid.Row="1" Grid.RowSpan="1" Height="37.5"  Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Add}" Click="AddTestParameters_Click"
                     IsEnabled="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=pages:ProfilesPage}}"/>
             
             
