--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/InputOptions.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/InputOptions.xaml
@@ -13,16 +13,16 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ValueConvertersDictionary.xaml" />
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ObjectDataProvider.xaml" />
-                
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/ImpulseOverwrite.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Grid.Resources>
     <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto" SharedSizeGroup="Column0" />
-            <ColumnDefinition Width="*" SharedSizeGroup="Column1"/>
+        <ColumnDefinition Width="*" />
+        <ColumnDefinition Width="1.1*" />
             <ColumnDefinition Width="30" />
-            <ColumnDefinition Width="auto" SharedSizeGroup="Column3" />
-            <ColumnDefinition Width="*" SharedSizeGroup="Column4"/>
+        <ColumnDefinition Width="*" />
+        <ColumnDefinition Width="1.1*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -35,47 +35,63 @@
         <RowDefinition Height="*" />
         <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-    <TextBlock Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" Text="Номер позиции" VerticalAlignment="Center"/>
+    <Label Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" Content="Номер позиции" VerticalAlignment="Center"/>
     <ComboBox Grid.Column="1" Grid.Row="0" ItemsSource="{Binding Source={StaticResource NumberPosition}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding NumberPosition}"  />
 
-    <TextBlock Grid.Column="0" Grid.Row="1" Text="Напр. управления, В" Visibility="{Binding ShowVoltage, Converter={StaticResource B2V}}" />
+    <Label Grid.Column="0" Grid.Row="1" Content="Напр. управления, В" Visibility="{Binding ShowVoltage, Converter={StaticResource B2V}}" />
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="1"  Visibility="{Binding ShowVoltage, Converter={StaticResource B2V}}" Value="{Binding ControlVoltage}" StringFormat="{}{0:N1}"/>
 
-    <TextBlock Grid.Column="0" Grid.Row="4" TextWrapping="Wrap">
+    <Label Grid.Column="0" Grid.Row="4" >
         <TextBlock>
                 Напряжение вспом.<LineBreak/>питания 1, В
         </TextBlock>
-    </TextBlock>
+    </Label>
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="4"   Value="{Binding AuxiliaryVoltagePowerSupply1}"   StringFormat="N2"/>
 
-    <TextBlock Grid.Column="0" Grid.Row="5" TextWrapping="Wrap">
+    <Label Grid.Column="0" Grid.Row="5" >
+        <TextBlock>
                 Напряжение вспом.<LineBreak/>питания 2, В
-    </TextBlock>
+        </TextBlock>
+    </Label>
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="5"   Value="{Binding AuxiliaryVoltagePowerSupply2}"   StringFormat="N2"/>
 
-    <TextBlock Grid.Column="0" Grid.Row="6" Text="Ток входа мин, мА" ></TextBlock>
-    <customControls:NumericUpDown Grid.Column="1" Grid.Row="6"   Value="{Binding InputCurrentMinimum}" StringFormat="N2"/>
+    <Label Grid.Column="0" Grid.Row="6" Content="Ток входа мин, мА" Visibility="{Binding ShowVoltage, Converter={StaticResource B2V}}"></Label>
+    <customControls:NumericUpDown Grid.Column="1" Grid.Row="6"  Visibility="{Binding ShowVoltage, Converter={StaticResource B2V}}" Value="{Binding InputCurrentMinimum}" StringFormat="N2"/>
+
+    <TextBlock Grid.Column="0" Grid.Row="7" Visibility="{Binding ShowAmperage, Converter={StaticResource B2V}}">
+        Напряжение<LineBreak/>входа мин. мВ
+    </TextBlock>
+    <customControls:NumericUpDown Grid.Column="1" Grid.Row="7" Visibility="{Binding ShowAmperage, Converter={StaticResource B2V}}"  Value="{Binding InputVoltageMinimum}" StringFormat="N2"/>
 
 
-
-    <TextBlock Grid.Column="3" Grid.Row="0" Text="Тип управления"/>
+    <Label Grid.Column="3" Grid.Row="0" Content="Тип управления"/>
     <ComboBox Grid.Column="4" Grid.Row="0" ItemsSource="{Binding Source={StaticResource TypeManagement}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding TypeManagement}"  />
 
-    <TextBlock Grid.Column="3" Grid.Row="1" Text="Ток управления, мА" Visibility="{Binding ShowAmperage, Converter={StaticResource B2V}}"/>
+    <Label Grid.Column="3" Grid.Row="1" Content="Ток управления, мА" Visibility="{Binding ShowAmperage, Converter={StaticResource B2V}}"/>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="1" Visibility="{Binding ShowAmperage, Converter={StaticResource B2V}}" Value="{Binding ControlCurrent}"  StringFormat="N2"/>
 
-    <TextBlock Grid.Column="3" Grid.Row="4" TextWrapping="Wrap">
+    <Label Grid.Column="3" Grid.Row="4" >
+        <TextBlock>
                 Ток вспомогательного<LineBreak/>питания 1, мА
-    </TextBlock>
+        </TextBlock>
+    </Label>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="4"   Value="{Binding AuxiliaryCurrentPowerSupply1}"   StringFormat="N2"/>
-    
-    <TextBlock Grid.Column="3" Grid.Row="5" TextWrapping="Wrap">
+
+    <Label Grid.Column="3" Grid.Row="5" >
+        <TextBlock>
                 Ток вспомогательного<LineBreak/>питания 2, мА
-    </TextBlock>
+        </TextBlock>
+    </Label>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="5"   Value="{Binding AuxiliaryCurrentPowerSupply2}"   StringFormat="N2"/>
 
-    <TextBlock Grid.Column="3" Grid.Row="6" Text="Ток входа макс, мА" />
-    <customControls:NumericUpDown Grid.Column="4" Grid.Row="6"   Value="{Binding InputCurrentMaximum}" StringFormat="N2"/>
+    <Label Grid.Column="3" Grid.Row="6" Content="Ток входа макс, мА" Visibility="{Binding ShowVoltage, Converter={StaticResource B2V}}"/>
+    <customControls:NumericUpDown Grid.Column="4" Grid.Row="6"  Visibility="{Binding ShowVoltage, Converter={StaticResource B2V}}"  Value="{Binding InputCurrentMaximum}" StringFormat="N2"/>
 
+    <Label Grid.Column="3" Grid.Row="7" Visibility="{Binding ShowAmperage, Converter={StaticResource B2V}}">
+        <TextBlock>
+        Напряжение<LineBreak/>входа макс. мВ
+        </TextBlock>
+    </Label>
+    <customControls:NumericUpDown Grid.Column="4" Grid.Row="7"  Visibility="{Binding ShowAmperage, Converter={StaticResource B2V}}" Value="{Binding InputVoltageMaximum}" StringFormat="N2"/>
 
 </Grid>
