--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/ProhibitionVoltage.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/ProhibitionVoltage.xaml
@@ -13,16 +13,16 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ValueConvertersDictionary.xaml" />
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ObjectDataProvider.xaml" />
-                
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/ImpulseOverwrite.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Grid.Resources>
     <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto" SharedSizeGroup="Column0" />
-            <ColumnDefinition Width="*" SharedSizeGroup="Column1"/>
+        <ColumnDefinition Width="*"  />
+        <ColumnDefinition Width="1.1*" />
             <ColumnDefinition Width="30" />
-            <ColumnDefinition Width="auto" SharedSizeGroup="Column3" />
-            <ColumnDefinition Width="*" SharedSizeGroup="Column4"/>
+        <ColumnDefinition Width="*" />
+        <ColumnDefinition Width="1.1*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -41,13 +41,7 @@
     <Label Grid.Column="0" Grid.Row="1" Content="Напр. управления, В" Visibility="{Binding ShowVoltage, Converter={StaticResource B2V}}" />
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="1"  Visibility="{Binding ShowVoltage, Converter={StaticResource B2V}}" Value="{Binding ControlVoltage}" StringFormat="{}{0:N1}"/>
 
-    <Label Grid.Column="0" Grid.Row="2" Visibility="{Binding IsDC, Converter={StaticResource B2V}}">
-            <TextBlock>
-                Тип комм. напряжения<LineBreak/>при измерении утечки</TextBlock>
-        </Label>
-    <ComboBox Grid.Column="1" Grid.Row="2" ItemsSource="{Binding Source={StaticResource ApplicationPolarityConstantSwitchingVoltage}}" Visibility="{Binding IsDC, Converter={StaticResource B2V}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding ApplicationPolarityConstantSwitchingVoltage}" />
-
-    <Label Grid.Column="0" Grid.Row="3" Content="Коммутируемый ток, мА" ></Label>
+    <Label Grid.Column="0" Grid.Row="3" Content="Коммутир. ток, мА" ></Label>
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="3"   Value="{Binding SwitchedAmperage}" StringFormat="N2"/>
 
     <TextBlock Grid.Column="0" Grid.Row="4" TextWrapping="Wrap">
@@ -79,21 +73,16 @@
     <Label Grid.Column="3" Grid.Row="1" Content="Ток управления, мА" Visibility="{Binding ShowAmperage, Converter={StaticResource B2V}}"/>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="1" Visibility="{Binding ShowAmperage, Converter={StaticResource B2V}}" Value="{Binding ControlCurrent}"  StringFormat="N2"/>
 
-    <TextBlock Grid.Column="3" Grid.Row="2" Visibility="{Binding IsDC, Converter={StaticResource B2V}}">
-        <TextBlock>
-                Полярность приложения<LineBreak/>пост. комм. напряжения
-        </TextBlock>
-    </TextBlock>
-    <ComboBox Grid.Column="4" Grid.Row="2" ItemsSource="{Binding Source={StaticResource PolarityDCSwitchingVoltageApplication}}" Visibility="{Binding IsDC, Converter={StaticResource B2V}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding PolarityDCSwitchingVoltageApplication}" />
-
-    <Label Grid.Column="3" Grid.Row="3" Content="Коммутируемое напр., В"/>
+    <Label Grid.Column="3" Grid.Row="3" >
+        <TextBlock Text="Коммутируем. напр., В" TextWrapping="Wrap"/>
+    </Label>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="3"   Value="{Binding SwitchedVoltage}"   StringFormat="N2"/>
 
-    <TextBlock Grid.Column="3" Grid.Row="4" TextWrapping="Wrap">
+    <Label Grid.Column="3" Grid.Row="4" >
         <TextBlock>
                 Ток вспомогательного<LineBreak/>питания 1, мА
         </TextBlock>
-    </TextBlock>
+    </Label>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="4"   Value="{Binding AuxiliaryCurrentPowerSupply1}"   StringFormat="N2"/>
     
     <TextBlock Grid.Column="3" Grid.Row="5" TextWrapping="Wrap">
