--- a/SCME.WpfControlLibrary/Styles/ListViewItemTestParameter.xaml
+++ b/SCME.WpfControlLibrary/Styles/ListViewItemTestParameter.xaml
@@ -28,15 +28,15 @@
                                 <RowDefinition Height="Auto" />
                             </Grid.RowDefinitions>
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="auto" SharedSizeGroup="Column0" />
-                                <ColumnDefinition Width="*" SharedSizeGroup="Column1"/>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="1.1*" />
                                 <ColumnDefinition Width="30" />
-                                <ColumnDefinition Width="auto" SharedSizeGroup="Column3" />
-                                <ColumnDefinition Width="*" SharedSizeGroup="Column4"/>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="1.1*" />
                             </Grid.ColumnDefinitions>
 
                             <Label  Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" Content="{Binding Converter={StaticResource TP2S}}" />
-                            <CheckBox Grid.Column="3" Grid.Row="0" IsChecked="{Binding IsEnabled}" Content="{x:Static res:Resources.IsActive}" HorizontalAlignment="Right" FlowDirection="RightToLeft"
+                            <CheckBox Grid.Column="3" Grid.Row="0" IsChecked="{Binding IsEnabled}" Content="{x:Static res:Resources.IsActive}" Visibility="Collapsed" HorizontalAlignment="Right" FlowDirection="RightToLeft"
                                       d:DataContext="{d:DesignInstance baseTestParametersAndNormatives:BaseTestParametersAndNormatives }" />
                             <StackPanel Grid.Column="4" Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right" >
 
